# mock-requester

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  python-3.11.6-lint.yml  python-3.11.6-tests.yml  python-3.11.6-type-check.yml  workflow.yml
.github/workflows/python-3.11.6/: lint.yml
samples/: README.md  docker-compose.request-chain-with-values-from-side-effects.yaml  docker-compose.simple-request-with-placeholder.yaml  docker-compose.simple-request.yaml  request-chain-with-values-from-side-effects.yaml  simple-request-with-placeholder.yaml  simple-request.yaml
samples/client/: Dockerfile  README.md  pyproject.toml  requirements.txt
samples/client/src/: main.py
samples/external-api/: Dockerfile  README.md  requirements.txt
samples/external-api/src/: main.py
src/: app.py  definitions.py  ioc_container.py  main.py  settings.py
src/modules/adapters/api/: mock_router.py
src/modules/adapters/config/: config_parser.py
src/modules/adapters/makers/: request_maker.py
src/modules/adapters/replacers/: replacer.py
src/modules/adapters/repositories/: config_repository.py
src/modules/core/entities/: config_entity.py  side_effect_result_entity.py
src/modules/core/enums/: config.py  config_enum.py  http.py
src/modules/core/exceptions/: server_configuration_error.py
src/modules/core/helpers/: yaml_parser.py
src/modules/core/ports/: config_parser_port.py  config_repository_port.py  request_maker_port.py  request_service_port.py
src/modules/core/services/: request_service.py
tests/: conftest.py
tests/api/: api_client.py  test_mock_router.py
tests/helpers/: random.py
tests/libraries/pydantic/: test_model_validating.py
tests/modules/adapters/makers/request_maker/: test_request_maker_unit.py
tests/modules/adapters/replacers/: test_replacer_unit.py
tests/modules/adapters/repositories/config_repository/: test_config_repository_integration.py  test_config_repository_unit.py
tests/modules/adapters/repositories/integration/: test_config_repository_integration.py
tests/modules/core/services/unit/: test_request_service.py
tests/unit/config/: test_config_parser.py
tests/unit/parsers/: test_yaml_parser.py
tests/unit/replacers/: test_replacer.py
