[tool.poetry]
name = "mock-requester-api"
version = "0.1.0"
description = ""
authors = ["Maciej Hankus"]
readme = "README.md"
packages = [{ include = "src" }]


[tool.poetry.dependencies]
dependency-injector = "4.41.0"
pytest = "7.2.1"
python = "=3.11.3"
python-dotenv = "0.21.1"
six = "1.16.0"
sqlalchemy = "1.4.46"
httpx = "0.24.0"
uvicorn = "0.22.0"
art = "5.9"
pyhumps = "3.8.0"
pyyaml = "6.0.1"
fastapi = "0.109.0"
pydantic = "1.10.9"
anyio = "3.7.1"
pyinstaller = "6.3.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
ruff = "0.0.252"
black = "23.1.0"
isort = "5.12.0"
pytest-httpx = "0.22.0"
starlette-testclient = "0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "poetry.lock"
]
